2001-04-16  Larry Jones  <larry.jones@sdr.com>

	* depcomp (aix): Remove stray HP-UX code.

2001-04-12  Larry Jones  <larry.jones@sdr.com>

	* mkinstalldirs: Newer version from Automake.

2001-04-12  Larry Jones  <larry.jones@sdr.com>

	* depcomp: Newer version from Automake.

2001-04-04  Larry Jones  <larry.jones@sdr.com>

	* depcomp: Don't count on $? being set in then or else clauses.

2001-03-30  Larry Jones  <larry.jones@sdr.com>

	* NEWS: Note new rlog and rannotate commands.

2001-03-14  Derek Price  <derek.price@openavenue.com>

	* configure.in (AC_CHECK_FUNCS): Look for gettimeofday.

	* config.h.in: Regenerated:
	* configure: Ditto.
	* stamp-h1.in: Ditto.

2001-03-14  Derek Price  <derek.price@openavenue.com>

	New version of Automake (1.4e).  With luck it works with the quirky BSD
	Make.

	* aclocal.m4: Regenerated.
	* configure: Ditto.
	* Makefile.in: Ditto.
	* stamp-h1.in: Ditto.

2001-02-28  Derek Price  <derek.price@openavenue.com>

	* acinclude.m4 (ACX_WITH_GSSAPI): Move the -L linker option back into
	LIBS where it should be.  LDFLAGS is a user variable.

	* aclocal.m4: Regenerated.
	* configure: Regenerated.

2001-02-23  Derek Price  <derek.price@openavenue.com>

	* configure.in: Comment definition of PR_PROGRAM.

	* configure: Regenerated.
	
2001-02-22  Derek Price  <derek.price@openavenue.com>
	    Pavel Roskin  <proski@gnu.org>

	* configure.in: Define PR_PROGRAM if `pr' has been found.

	* config.h.in: Regenerated.
	* configure: Regenerated.

2001-02-20  Derek Price  <derek.price@openavenue.com>

	* acconfig.h (HAVE_GSSAPI): Removed.  Entries in acconfig.h aren't
	necesary when the full functionality of AC_DEFINE is used.
	(HAVE_GSS_C_NT_HOSTBASED_SERVICE): Ditto.
	* acinclude.m4 (ACX_WITH_GSSAPI): New file with GSSAPI configure code.
	* configure.in: Use ACX_WITH_GSSAPI instead of writing GSSAPI code in
	place.

	* aclocal.m4: Regenerated.
	* config.h.in: Regenerated.
	* configure: Regenerated.
