@@ -29,7 +29,9 @@ in the CVS/Root file in each created directory, so this is not recommended,
 except perhaps when accessing anonymous repositories or the like.
 
 * The distribution has been converted to use Automake.  This shouldn't affect
-most users except to ease some portability concerns.
+most users except to ease some portability concerns, but if you are building
+from the repository and encounter problems with the makefiles, you might try
+running ./noautoconf.sh after a fresh update -AC.
 
 Changes since 1.10:
 
